# glsl-include

./: CMakeLists.txt  README.md
assets/shaders/: blinn_phong.frag  blinn_phong.vert  color.frag  color.vert  helper.glsl  point_light.glsl
data/runtime/: color.frag  color.vert
include/: shader.h  shader.tpp  util.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  shader.cpp  util.cpp
